@@ -173,7 +173,7 @@ xtr_base_c::create_extractor(const std::string &new_codec_id,
     return new xtr_mpeg1_2_video_c(new_codec_id, new_tid, tspec);
   else if (new_codec_id == MKV_V_THEORA)
     return new xtr_oggtheora_c(new_codec_id, new_tid, tspec);
-  else if (new_codec_id == MKV_V_VP8)
+  else if ((new_codec_id == MKV_V_VP8) || (new_codec_id == MKV_V_VP9))
     return new xtr_ivf_c(new_codec_id, new_tid, tspec);
 
   // Subtitle formats
