@@ -255,3 +255,4 @@ T_406ogm_chapters_ansi_encoded:32ea751b26cd868a808834a3473d43f5-902ad8d2388a7509
 T_407empty_tag_and_chapter_files:9b56c96b16de691f479a0bff09f7f3b3-9b56c96b16de691f479a0bff09f7f3b3-9b56c96b16de691f479a0bff09f7f3b3:passed:20131018-202312:0.131204626
 T_408utf_encodings_with_bom:14ceb03b7ba738b99cb74d9daa1e5564-14ceb03b7ba738b99cb74d9daa1e5564-14ceb03b7ba738b99cb74d9daa1e5564-14ceb03b7ba738b99cb74d9daa1e5564-14ceb03b7ba738b99cb74d9daa1e5564:passed:20131019-155216:0.215939391
 T_409mux_vp9:fc1aae4cb828024783d254077ead7eb6-aa52fea93972a3294168417659dd8842:passed:20131019-195820:0.071892447
+T_410extract_vp9:b6135380fa07f827384ad1004015d79c:passed:20131019-200643:0.033861429
